# concord

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  prelude.rs  systray_app.rs
src/protocol/: discord.rs  irc.rs  mod.rs  terminal.rs
