[package]
name = "concord-irc"
version = "0.1.0"
authors = ["Ratys <ratysz@gmail.com>"]

[lib]
name = "concord_core"
path = "src/lib.rs"

[[bin]]
name = "concord"
path = "src/main.rs"

[features]
discord_protocol = ["serenity"]
irc_protocol = ["irc"]
terminal_protocol = ["text_io"]

[dependencies]
config = "0.8"
futures = "0.1"
irc = { version = "0.13", optional = true }
log = "0.4"
serenity = { version = "0.5", optional = true }
simplelog = "0.5"
systray = "0.2"
text_io = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'