[package]
name = "concord"
version = "0.1.0"
authors = ["Ratys <ratysz@gmail.com>"]

[lib]
name = "concord_core"
path = "src/lib.rs"

[[bin]]
name = "concord"
path = "src/main.rs"

[features]
discord_protocol = ["serenity"]
irc_protocol = ["irc"]
terminal_protocol = ["text_io"]

[dependencies]
chrono = "0.4"
config = "0.8"
fern = "0.5"
irc = { version = "0.13", optional = true }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serenity = { version = "0.5", optional = true }
systray = { path = "../systray-rs" }
text_io = { version = "0.1", optional = true }
tokio = "0.1"
tokio-core = "0.1"
tokio-threadpool = "~0.1.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'